# upperbody3

./: LICENSE  README.md
upperbody3_control/: CMakeLists.txt  package.xml
upperbody3_control/src/: dynamixel2dynamixel.cpp  dynamixel2dynamixel_origin.cpp  dynamixel_face.cpp  dynamixel_reader.cpp  dynamixel_writer.cpp  dynamixel_writer_origin.cpp  js2dynamixel.cpp  moveit2dynamixel.cpp
upperbody3_description/: CMakeLists.txt  package.xml  upperbody3.rviz
upperbody3_description/config/: upperbody3.yaml
upperbody3_description/launch/: display.launch  display_unjoint.launch  dynamixel_controllers.launch  dynamixel_controllers_twin.launch
upperbody3_description/meshes/: 2x_joint.stl  base.stl  endpoint.stl  larm.stl  rarm.stl
upperbody3_description/urdf/: upperbody3.urdf
upperbody3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
upperbody3_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  upper_body.srdf
upperbody3_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  upper_body_moveit_controller_manager.launch.xml  warehouse.launch
